# avs-device-sdk

./: README.md
cmakeBuild/cmake/: KeywordDetector.cmake
shared/KWD/: CMakeLists.txt
shared/KWD/KittAi/: CMakeLists.txt
shared/KWD/KittAi/include/KittAi/: KittAiKeyWordDetector.h  SnowboyWrapper.h
shared/KWD/KittAi/src/: CMakeLists.txt  KittAiKeyWordDetector.cpp  SnowboyWrapper.cpp
shared/KWD/KittAi/test/: CMakeLists.txt  KittAiKeyWordDetectorTest.cpp
shared/KWD/Sensory/include/Sensory/: SensoryKeywordDetector.h
shared/KWD/Sensory/src/: CMakeLists.txt  SensoryKeywordDetector.cpp
shared/KWD/Sensory/test/: CMakeLists.txt  SensoryKeywordDetectorTest.cpp
shared/KWD/acsdkKWDProvider/include/acsdkKWDProvider/KWDProvider/: KeywordDetectorProvider.h  file_config.h.in
shared/KWD/acsdkKWDProvider/src/: CMakeLists.txt  KeywordDetectorProvider.cpp
